syntax = "proto3";
import "google/protobuf/timestamp.proto";
import "protocol/constant/v1/constant.proto";
package gandelm.artifact.v1;

service ArtifactService {
  rpc List(ListRequest) returns (ListResponse);
  rpc Get(GetRequest) returns (GetResponse);
  rpc Create(CreateRequest) returns (CreateResponse);
  rpc Update(UpdateRequest) returns (UpdateResponse);
  rpc Delete(DeleteRequest) returns (DeleteResponse);
}

message ListRequest {}
message ListResponse { repeated Artifact artifacts = 1; }

message GetRequest { string artifact_id = 1; }
message GetResponse { Artifact artifact = 1; }

message CreateRequest {
  string id = 1;
  string title = 2;
  string description = 3;
  gandelm.constant.v1.ArtifactType type = 4;
}

message CreateResponse { Artifact artifact = 1; }

message UpdateRequest { Artifact artifact = 1; }

message UpdateResponse { Artifact artifact = 1; }

message DeleteRequest { string artifact_id = 1; }

message DeleteResponse {}

message Artifact {
  string id = 1;
  string title = 2;
  string description = 3;
  gandelm.constant.v1.ArtifactType type = 4;
  google.protobuf.Timestamp created_at = 5;
  google.protobuf.Timestamp updated_at = 6;
}
