syntax = "proto3";
import "google/protobuf/timestamp.proto";
package gandelm.catalog.v1;

service CatalogService {
  rpc List(ListRequest) returns (ListResponse);
  rpc Get(GetRequest) returns (GetResponse);
  rpc Create(CreateRequest) returns (CreateResponse);
  rpc Update(UpdateRequest) returns (UpdateResponse);
  rpc Delete(DeleteRequest) returns (DeleteResponse);
}

message ListRequest {}
message ListResponse { repeated Catalog catalogs = 1; }

message GetRequest { string catalog_id = 1; }
message GetResponse { Catalog catalog = 1; }

message CreateRequest {
  string version = 1;
  string name = 2;
  string description = 3;
  uint32 priority = 4;
  repeated Artifact artifacts = 5;
}

message CreateResponse { Catalog catalog = 1; }

message UpdateRequest { Catalog catalog = 1; }

message UpdateResponse { Catalog catalog = 1; }

message DeleteRequest { string catalog_id = 1; }

message DeleteResponse {}

message Catalog {
  string id = 1;
  string workload_id = 2;
  string name = 3;
  string description = 4;
  string version = 5;
  uint32 priority = 6;
  google.protobuf.Timestamp created_at = 7;
  google.protobuf.Timestamp updated_at = 8;
}

message Artifact {
  string name = 1;
  ArtifactType type = 2;
  string tag = 3;
}

enum ArtifactType {
  // UNKNOWN is the default value and should not be used.
  ARTIFACT_TYPE_UNSPECIFIED = 0;

  // CONTAINER_IMAGE represents a container image artifact.
  ARTIFACT_TYPE_CONTAINER_IMAGE = 1;

  // ASSET represents a generic asset artifact.
  ARTIFACT_TYPE_ASSET = 2;
}
